kubernetes/catalog/sonarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/sonarr.xml
# Category: MediaServer-Video, Downloaders
# Stars: 2117 | Downloads: 2337959025
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr
          ports:
            - containerPort: 8989
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8989
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8989
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: sonarr-data-0
              mountPath: "/config"
            - name: tmp-tv
              mountPath: "/tv"
            - name: tmp-downloads
              mountPath: "/downloads"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: sonarr-data-0
        persistentVolumeClaim:
          claimName: sonarr-data-0
      - name: tmp-tv
        emptyDir:
      - name: tmp-downloads
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: webui
  type: ClusterIP
