kubernetes/catalog/sonarr/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: int-rlservers-com-tls
